# mujocoSimulator

./: CMakeLists.txt  README.md
Force_Control/: CMakeLists.txt  force_control.cpp  force_control.h
TestBall/: CMakeLists.txt  main.cpp
TestDemo/: 123.xml  CMakeLists.txt  MJMODEL.TXT  main.cpp  seds_test.cpp
TestDemo/build-TestDemo-Desktop_Qt_5_12_9_GCC_64bit-Debug/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  qtcsettings.cmake
TestDoublePendulums/: CMakeLists.txt  doublependulums.xml  main.cpp
TestPanda/: CMakeLists.txt  main.cpp  test.cpp
TestPendulum/: CMakeLists.txt  data.csv  main.cpp  pendulum.xml
control_pendulum/__MACOSX/: ._control_pendulum
control_pendulum/__MACOSX/control_pendulum/: ._MJMODEL.TXT  ._how_to_use_template.rtf  ._main.c  ._makefile  ._pendulum.xml  ._run_unix  ._run_win.bat
dbpendulum/__MACOSX/: ._dbpendulum
dbpendulum/__MACOSX/dbpendulum/: ._data.csv  ._doublependulum.xml  ._how_to_use_template.rtf  ._main.c  ._main.m  ._makefile  ._run_unix  ._run_win.bat
dbpendulum/dbpendulum/: main.c
gmr/: CMakeLists.txt  gmr.cpp  gmr.h
panda_urdf/: model.config  panda.urdf
panda_xml/new/: my_panda.xml  panda.xml
panda_xml/old/assets/: env.xml  motor_actuator.xml  panda_peg_in_hole.xml  panda_without_gripper.xml  position_actuator.xml  scene.xml
panda_xml/old/mesh/: 40.stl  40_2.stl  42.stl  45.stl  hole.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl
pdf/: CMakeLists.txt  pdf.cpp  pdf.h
